# ee364a-project

./: CMakeLists.txt  Pipfile  README.md  setup.py
src/accel/cpp/: bindings.cpp  kernels.hpp  matmul.cpp  matmul.hpp  matrix.hpp
src/accel/kernels/: Makefile  kernel.cl
tests/: kernel_test.py
